--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
-dataSource.user=postgres
-dataSource.password=password
-dataSource.databaseName=postgres
-dataSource.serverName=docker
-dataSource.portNumber=5432
 minimumIdle=10
+dataSource.user=postgres
+dataSource.databaseName=postgres
+dataSource.password=password
+dataSource.serverName=192.168.99.100
+dataSource.portNumber=5432
