--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 minimumIdle=10
+dataSource.databaseName=bench
 dataSource.user=postgres
-dataSource.databaseName=postgres
 dataSource.password=password
 dataSource.serverName=192.168.99.100
 dataSource.portNumber=5432
